' diagram-id: SA-DGM-SYSTEM-STATE-001
' derived-from: BA-RULE-SYSTEM-001
@startuml
skinparam defaultFontName Arial
skinparam shadowing false
skinparam stateBackgroundColor #FFFFFF
skinparam stateBorderColor #616161

[*] --> Draft
Draft --> Submitted : submit
Submitted --> Approved : approve
Submitted --> Rejected : reject
Rejected --> Draft : revise
Approved --> [*]
@enduml
